fix transaction issues
