# docs/swagger.yaml
@@ -16,20 +16,24 @@ definitions:
     type: object
   http.CreateTransaction:
     properties:
-      account_id:
+      account_income:
         type: string
-      category_id:
+      account_outcome:
         type: string
+      categories:
+        items:
+          type: string
+        type: array
       date:
         type: string
       description:
         type: string
-      is_income:
-        type: boolean
+      income:
+        type: number
+      outcome:
+        type: number
       payer:
         type: string
-      total:
-        type: number
     type: object
   http.MasTransaction:
     properties:
@@ -147,20 +151,24 @@ definitions:
     type: object
   http.UpdTransaction:
     properties:
-      account_id:
+      account_income:
         type: string
-      category_id:
+      account_outcome:
         type: string
+      categories:
+        items:
+          type: string
+        type: array
       date:
         type: string
       description:
         type: string
-      is_income:
-        type: boolean
+      income:
+        type: number
+      outcome:
+        type: number
       payer:
         type: string
-      total:
-        type: number
       transaction_id:
         type: string
     type: object
@@ -177,22 +185,26 @@ definitions:
     type: object
   models.TransactionTransfer:
     properties:
-      account_id:
+      account_income:
         type: string
-      category_id:
+      account_outcome:
         type: string
+      categories:
+        items:
+          type: string
+        type: array
       date:
         type: string
       description:
         type: string
       id:
         type: string
-      is_income:
-        type: boolean
+      income:
+        type: number
+      outcome:
+        type: number
       payer:
         type: string
-      total:
-        type: number
     type: object
   models.User:
     properties:
@@ -278,51 +290,6 @@ info:
   title: Hamster API
   version: 1.0.1
 paths:
-  /api/all:
-    get:
-      description: Get User all transaction
-      parameters:
-      - example: 1
-        in: query
-        minimum: 1
-        name: page
-        type: integer
-      - example: 10
-        in: query
-        maximum: 20
-        minimum: 1
-        name: page_size
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Show transaction
-          schema:
-            $ref: '#/definitions/http.Response-http_MasTransaction'
-        "204":
-          description: Show actual accounts
-          schema:
-            $ref: '#/definitions/http.Response-string'
-        "400":
-          description: Client error
-          schema:
-            $ref: '#/definitions/http.ResponseError'
-        "401":
-          description: Unauthorized user
-          schema:
-            $ref: '#/definitions/http.ResponseError'
-        "403":
-          description: Forbidden user
-          schema:
-            $ref: '#/definitions/http.ResponseError'
-        "500":
-          description: Server error
-          schema:
-            $ref: '#/definitions/http.ResponseError'
-      summary: Get all transaction
-      tags:
-      - Transaction
   /api/auth//check-unique-login/{login}:
     get:
       description: Get bool parametrs about unique login
@@ -461,6 +428,51 @@ paths:
           schema:
             $ref: '#/definitions/http.ResponseError'
       summary: Delete Transaction
+      tags:
+      - Transaction
+  /api/transaction/all:
+    get:
+      description: Get User all transaction
+      parameters:
+      - example: 1
+        in: query
+        minimum: 1
+        name: page
+        type: integer
+      - example: 10
+        in: query
+        maximum: 20
+        minimum: 1
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Show transaction
+          schema:
+            $ref: '#/definitions/http.Response-http_MasTransaction'
+        "204":
+          description: Show actual accounts
+          schema:
+            $ref: '#/definitions/http.Response-string'
+        "400":
+          description: Client error
+          schema:
+            $ref: '#/definitions/http.ResponseError'
+        "401":
+          description: Unauthorized user
+          schema:
+            $ref: '#/definitions/http.ResponseError'
+        "403":
+          description: Forbidden user
+          schema:
+            $ref: '#/definitions/http.ResponseError'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/http.ResponseError'
+      summary: Get all transaction
       tags:
       - Transaction
   /api/transaction/create:
